[package]
name = "agent-shadow-mode"
version = "0.1.0"
edition = "2021"
description = "Record-not-execute shadow mode wrapper for AI agent tools"
license = "MIT"
repository = "https://github.com/MukundaKatta/agent-shadow-mode-rs"
keywords = ["agent", "shadow", "testing", "audit", "llm"]
categories = ["development-tools::testing"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
serde_json = "1"
